<resources>
    <string name="app_name">Doorboard</string>

    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_login">Login</string>

    <!-- Strings related to tabs -->
    <string name="title_activity_main">MainActivity</string>
    <string name="profile_tab">Profile</string>
    <string name="messages_tab">Messages</string>
    <string name="schedule_tab">Schedule</string>

    <!-- Strings related to profile fragment -->
    <string name="welcome">Hello, Daniel Chen!</string>
    <string name="picture">Picture</string>
    <string name="access_rooms">Accessible Rooms</string>
    <string name="access_rooms_list">Iribe 203, Iribe 304</string>
    <string name="request_rooms">Request Access</string>
    <string name="info">Additional Info</string>
    <string name="info_field_default">Your information goes here!</string>
    <string name="info_field"></string>
    <string name="update_info">Update Info</string>
    <string name="info_email"></string>
    <string name="email">Email</string>
    <string name="info_phone"></string>
    <string name="phone">Phone</string>
    <string name="info_website"></string>
    <string name="website">Website</string>
    <string name="info_default">none</string>

    <!-- Strings related to requesting access -->
    <string name= "room">Room</string>
    <string name= "access_time">Access Period</string>
    <string name= "reason">Reason for Request</string>
    <string name="submit">submit</string>
    <string name="submission_toast">Your request has been sent!</string>

    <!-- Strings related to message fragment -->
    <string name="update_message">Update your message...</string>
    <string name="save">Save</string>
    <string name="clear">Clear</string>

    <!-- Strings related to schedule fragment -->
    <string name="event_name">Name of event</string>
    <string name="date">Date</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="rooms">Rooms</string>
    <string name="room_1">Iribe 203</string>
    <string name="room_2">Iribe 304</string>
    <string name="repeat">Repeat</string>
    <string name="never">Never</string>
    <string name="daily">Daily</string>
    <string name="weekly">Weekly</string>
    <string name="monthly">Montly</string>
    <string name="forever">Forever</string>
    <string name="description">Description</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>

</resources>
