<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    tools:context="com.doorboard3.doorboardmobile.LoginActivity">

    <LinearLayout
        android:id="@+id/activity_login_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:clickable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/app_name"
            android:textSize="44dp"
            android:textColor="@color/white"
            android:layout_marginTop="90dp"
            android:layout_marginBottom="60dp"/>

        <!-- Username -->
        <com.doorboard3.doorboardmobile.CustomEditText
            android:id="@+id/login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/login_text_size"
            android:textColor="@color/white"
            android:maxLines="1"
            android:singleLine="true" />

        <!-- Password -->
        <com.doorboard3.doorboardmobile.CustomEditText
            android:id="@+id/login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:textColorHint="@color/light_grey"
            android:textSize="@dimen/login_text_size"
            android:textColor="@color/white"
            android:fontFamily="Arial"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true" />

        <!-- Login Button -->
        <Button
            android:id="@+id/login_button"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="24dp"
            android:text="@string/action_login"
            android:textSize="@dimen/login_button_size"
            android:textStyle="bold"
            android:textColor="@color/light_grey"
            android:background="@color/colorPrimaryDark" />

    </LinearLayout>

</RelativeLayout>
